feat: veiculos - listar por cliente via banco + buscar por placa (exata/parcial)