@@ -1,27 +1,27 @@
 package br.com.oficina.adapters.controllers;
 
-import br.com.oficina.adapters.controllers.dto.*;
-import br.com.oficina.adapters.controllers.mappers.ClienteDtoMapper;
-import br.com.oficina.ports.ClienteRepository;
-import br.com.oficina.usecases.*;
+import br.com.oficina.adapters.controllers.dto.ClienteDto;
+import br.com.oficina.domain.Cliente;
+import br.com.oficina.usecases.cliente.AtualizarClienteUseCase;
+import br.com.oficina.usecases.cliente.BuscarClienteUseCase;
+import br.com.oficina.usecases.cliente.CadastrarClienteUseCase;
+import br.com.oficina.usecases.cliente.ListarClientesUseCase;
+import br.com.oficina.usecases.cliente.RemoverClienteUseCase;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.tags.Tag;
+import org.springdoc.core.annotations.ParameterObject;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
-import jakarta.validation.Valid;
 
+import java.net.URI;
+import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
-// Swagger / OpenAPI
-import io.swagger.v3.oas.annotations.tags.Tag;
-import io.swagger.v3.oas.annotations.Operation;
-import io.swagger.v3.oas.annotations.responses.ApiResponse;
-import io.swagger.v3.oas.annotations.media.Content;
-import io.swagger.v3.oas.annotations.media.Schema;
-import io.swagger.v3.oas.annotations.media.ExampleObject;
-
-@Tag(name = "Clientes", description = "Endpoints para gerenciamento de clientes (CRUD + PATCH).")
 @RestController
 @RequestMapping("/clientes")
+@Tag(name = "Clientes", description = "CRUD de clientes")
 public class ClienteController {
 
     private final CadastrarClienteUseCase cadastrar;
@@ -30,158 +30,109 @@ public class ClienteController {
     private final AtualizarClienteUseCase atualizar;
     private final RemoverClienteUseCase remover;
 
-    public ClienteController(ClienteRepository repository) {
-        this.cadastrar = new CadastrarClienteUseCase(repository);
-        this.buscar    = new BuscarClienteUseCase(repository);
-        this.listar    = new ListarClientesUseCase(repository);
-        this.atualizar = new AtualizarClienteUseCase(repository);
-        this.remover   = new RemoverClienteUseCase(repository);
+    public ClienteController(CadastrarClienteUseCase cadastrar,
+                             BuscarClienteUseCase buscar,
+                             ListarClientesUseCase listar,
+                             AtualizarClienteUseCase atualizar,
+                             RemoverClienteUseCase remover) {
+        this.cadastrar = cadastrar;
+        this.buscar = buscar;
+        this.listar = listar;
+        this.atualizar = atualizar;
+        this.remover = remover;
     }
 
-    @Operation(
-        summary = "Criar cliente",
-        description = "Cria um novo cliente. Campos obrigatórios: nome, email e telefone.",
-        requestBody = @io.swagger.v3.oas.annotations.parameters.RequestBody(
-            required = true,
-            content = @Content(
-                schema = @Schema(implementation = ClienteRequest.class),
-                examples = {
-                    @ExampleObject(
-                        name = "Mínimo",
-                        value = "{\"nome\":\"Fulano\",\"email\":\"fulano@ex.com\",\"telefone\":\"11999999999\"}"
-                    ),
-                    @ExampleObject(
-                        name = "Completo",
-                        value = "{\"nome\":\"Fulano\",\"email\":\"fulano@ex.com\",\"telefone\":\"11999999999\",\"cpf\":\"12345678900\",\"logradouro\":\"Rua A\",\"numero\":\"123\",\"bairro\":\"Centro\",\"cidade\":\"São Paulo\",\"estado\":\"SP\",\"cep\":\"01000-000\",\"dataNascimento\":\"1990-05-10\",\"observacao\":\"VIP\"}"
-                    )
-                }
-            )
-        ),
-        responses = {
-            @ApiResponse(responseCode = "200", description = "Cliente criado com sucesso",
-                content = @Content(schema = @Schema(implementation = ClienteResponse.class))),
-            @ApiResponse(responseCode = "400", description = "Erro de validação",
-                content = @Content(mediaType = "application/json",
-                    examples = @ExampleObject(value = "{\"status\":400,\"error\":\"Bad Request\",\"message\":\"Erro de validação\",\"fields\":{\"nome\":\"nome é obrigatório\"}}")))
-        }
-    )
-    @PostMapping
-    public ResponseEntity<ClienteResponse> criar(@Valid @RequestBody ClienteRequest body) {
-        var dominio = ClienteDtoMapper.toDomainForCreate(body);
-        var salvo = cadastrar.executar(dominio);
-        return ResponseEntity.ok(ClienteDtoMapper.toResponse(salvo));
-    }
-
-    @Operation(
-        summary = "Buscar cliente por ID",
-        description = "Retorna um cliente pelo seu identificador.",
-        responses = {
-            @ApiResponse(responseCode = "200", description = "Encontrado",
-                content = @Content(schema = @Schema(implementation = ClienteResponse.class))),
-            @ApiResponse(responseCode = "404", description = "Não encontrado")
-        }
-    )
-    @GetMapping("/{id}")
-    public ResponseEntity<ClienteResponse> buscarPorId(@PathVariable Long id) {
-        return buscar.executar(id)
-                .map(ClienteDtoMapper::toResponse)
-                .map(ResponseEntity::ok)
-                .orElse(ResponseEntity.notFound().build());
-    }
-
-    @Operation(
-        summary = "Listar clientes",
-        description = "Retorna a lista de clientes."
-    )
+    // LIST
     @GetMapping
-    public List<ClienteResponse> listarTodos() {
-        return listar.executar().stream()
-                .map(ClienteDtoMapper::toResponse)
-                .collect(Collectors.toList());
+    @Operation(summary = "Listar clientes")
+    public ResponseEntity<List<ClienteDto>> list() {
+        List<ClienteDto> out = listar.execute()
+                .stream()
+                .map(ClienteDto::fromDomain)
+                .toList();
+        return ResponseEntity.ok(out);
     }
 
-    @Operation(
-        summary = "Atualizar cliente (PUT)",
-        description = "Atualização completa do cliente (sobrescreve os campos). Para alteração parcial use PATCH.",
-        requestBody = @io.swagger.v3.oas.annotations.parameters.RequestBody(
-            required = true,
-            content = @Content(
-                schema = @Schema(implementation = ClienteRequest.class),
-                examples = @ExampleObject(
-                    name = "Atualização simples",
-                    value = "{\"nome\":\"Fulano da Silva\",\"email\":\"fulano.silva@ex.com\",\"telefone\":\"11999999999\",\"ativo\":true}"
-                )
-            )
-        ),
-        responses = {
-            @ApiResponse(responseCode = "200", description = "Atualizado",
-                content = @Content(schema = @Schema(implementation = ClienteResponse.class))),
-            @ApiResponse(responseCode = "404", description = "Não encontrado"),
-            @ApiResponse(responseCode = "400", description = "Erro de validação")
+    // GET by ID
+    @GetMapping("/{id}")
+    @Operation(summary = "Buscar cliente por ID")
+    public ResponseEntity<ClienteDto> getById(@PathVariable Long id) {
+        Optional<Cliente> opt = buscar.execute(id);
+        if (opt.isEmpty()) return ResponseEntity.notFound().build();
+        return ResponseEntity.ok(ClienteDto.fromDomain(opt.get()));
+    }
+
+    // CREATE
+    @PostMapping
+    @Operation(summary = "Criar cliente")
+    public ResponseEntity<ClienteDto> create(@RequestBody ClienteDto body) {
+        // dataCadastro pode vir nula no POST — atribuímos agora (ou deixe para o domínio/repositório atribuir)
+        if (body.dataCadastro == null) {
+            body.dataCadastro = LocalDateTime.now();
         }
-    )
+        Cliente salvo = cadastrar.execute(ClienteDto.toDomain(body));
+        ClienteDto resp = ClienteDto.fromDomain(salvo);
+        return ResponseEntity
+                .created(URI.create("/clientes/" + resp.id))
+                .body(resp);
+    }
+
+    // UPDATE (full)
     @PutMapping("/{id}")
-    public ResponseEntity<ClienteResponse> atualizarCliente(@PathVariable Long id, @Valid @RequestBody ClienteRequest body) {
-        var existenteOpt = buscar.executar(id);
-        if (existenteOpt.isEmpty()) {
-            return ResponseEntity.notFound().build();
-        }
-        var existente = existenteOpt.get();
-        var dominio = ClienteDtoMapper.toDomainForUpdate(id, body, existente.getDataCadastro(), existente.isAtivo());
-        var salvo = atualizar.executar(dominio);
-        return ResponseEntity.ok(ClienteDtoMapper.toResponse(salvo));
+    @Operation(summary = "Atualizar cliente (substituição completa)")
+    public ResponseEntity<ClienteDto> update(@PathVariable Long id, @RequestBody ClienteDto body) {
+        Optional<Cliente> existente = buscar.execute(id);
+        if (existente.isEmpty()) return ResponseEntity.notFound().build();
+
+        // preservar dataCadastro original
+        body.id = id;
+        body.dataCadastro = existente.get().getDataCadastro();
+
+        Cliente atualizadoDom = ClienteDto.toDomain(body);
+        Cliente result = atualizar.execute(atualizadoDom);
+        return ResponseEntity.ok(ClienteDto.fromDomain(result));
     }
 
-    @Operation(
-        summary = "Atualização parcial (PATCH)",
-        description = "Altera apenas os campos enviados no corpo. Campos ausentes são preservados; string vazia (\"\") limpa o campo (null).",
-        requestBody = @io.swagger.v3.oas.annotations.parameters.RequestBody(
-            required = true,
-            content = @Content(
-                schema = @Schema(implementation = ClientePatchRequest.class),
-                examples = {
-                    @ExampleObject(
-                        name = "Trocar nome e email",
-                        value = "{\"nome\":\"Fulano da Silva\",\"email\":\"fulano.silva@ex.com\"}"
-                    ),
-                    @ExampleObject(
-                        name = "Limpar observação e ativar",
-                        value = "{\"observacao\":\"\",\"ativo\":true}"
-                    )
-                }
-            )
-        ),
-        responses = {
-            @ApiResponse(responseCode = "200", description = "Atualizado parcialmente",
-                content = @Content(schema = @Schema(implementation = ClienteResponse.class))),
-            @ApiResponse(responseCode = "404", description = "Não encontrado"),
-            @ApiResponse(responseCode = "400", description = "Erro de validação")
-        }
-    )
+    // PATCH (merge: só troca campos não nulos do body)
     @PatchMapping("/{id}")
-    public ResponseEntity<ClienteResponse> patch(@PathVariable Long id, @Valid @RequestBody ClientePatchRequest body) {
-        var existenteOpt = buscar.executar(id);
-        if (existenteOpt.isEmpty()) {
-            return ResponseEntity.notFound().build();
-        }
-        var existente = existenteOpt.get();
-        var merged = ClienteDtoMapper.mergeForPatch(existente, body);
-        var salvo = atualizar.executar(merged);
-        return ResponseEntity.ok(ClienteDtoMapper.toResponse(salvo));
+    @Operation(summary = "Atualização parcial (merge)")
+    public ResponseEntity<ClienteDto> patch(@PathVariable Long id, @RequestBody ClienteDto parcial) {
+        Optional<Cliente> existente = buscar.execute(id);
+        if (existente.isEmpty()) return ResponseEntity.notFound().build();
+
+        ClienteDto base = ClienteDto.fromDomain(existente.get());
+        // aplica somente não nulos
+        if (parcial.nome != null) base.nome = parcial.nome;
+        if (parcial.cpf != null) base.cpf = parcial.cpf;
+        if (parcial.cnpj != null) base.cnpj = parcial.cnpj;
+        if (parcial.email != null) base.email = parcial.email;
+        if (parcial.telefone != null) base.telefone = parcial.telefone;
+
+        if (parcial.logradouro != null) base.logradouro = parcial.logradouro;
+        if (parcial.numero != null) base.numero = parcial.numero;
+        if (parcial.complemento != null) base.complemento = parcial.complemento;
+        if (parcial.bairro != null) base.bairro = parcial.bairro;
+        if (parcial.cidade != null) base.cidade = parcial.cidade;
+        if (parcial.estado != null) base.estado = parcial.estado;
+        if (parcial.cep != null) base.cep = parcial.cep;
+
+        if (parcial.dataNascimento != null) base.dataNascimento = parcial.dataNascimento;
+        if (parcial.observacao != null) base.observacao = parcial.observacao;
+        if (parcial.ativo != null) base.ativo = parcial.ativo;
+
+        // preservar id e dataCadastro
+        base.id = id;
+        base.dataCadastro = existente.get().getDataCadastro();
+
+        Cliente result = atualizar.execute(ClienteDto.toDomain(base));
+        return ResponseEntity.ok(ClienteDto.fromDomain(result));
     }
 
-    @Operation(
-        summary = "Remover cliente",
-        description = "Remove o cliente pelo identificador.",
-        responses = {
-            @ApiResponse(responseCode = "204", description = "Removido"),
-            @ApiResponse(responseCode = "404", description = "Não encontrado")
-        }
-    )
+    // DELETE
     @DeleteMapping("/{id}")
-    public ResponseEntity<Void> deletar(@PathVariable Long id) {
-        return remover.executar(id)
-                ? ResponseEntity.noContent().build()
-                : ResponseEntity.notFound().build();
+    @Operation(summary = "Remover cliente")
+    public ResponseEntity<Void> delete(@PathVariable Long id) {
+        boolean ok = remover.execute(id);
+        return ok ? ResponseEntity.noContent().build() : ResponseEntity.status(HttpStatus.NOT_FOUND).build();
     }
 }
